--- a/deskripsi obat/deskripsi obat biovision.html
+++ b/deskripsi obat/deskripsi obat biovision.html
@@ -60,7 +60,7 @@
 
 <script>
     var musik = new Audio();
-    musik.src = "../audio/music1.mp3"
+    musik.src = "../audio/Biovision.mp3"
     musik.loop = true;
     musik.play();
 
@@ -87,8 +87,8 @@
         <ul class="gallery">
             <li>
                 <a href=" ">
-                <img src="../images/eyevit.jpg" alt="EYEVIT"/>
-                <span>Suplemen & Terapi Penunjang</span>
+                <img src="../images/biovision 2.jpg" alt="Biovision Gold"/>
+                <span>Vitamin & Supplement</span>
                  </a>
             </li>
             <div class="clear"></div>
@@ -96,68 +96,55 @@
     </div>
     <div class="container">
         <ul class="deskripsi">
-            <p>
-                Eyevit adalah suplemen yang mengandung Ekstrak Billberry, Vitamin A, Beta karoten, Vitamin E, 
-                Lutein, Zeaxanthin, Selenium dan Zinc digunakan untuk memenuhi kebutuhan nutrisi pada mata. 
-                Eyevit tersedia dalam bentuk sediaan tablet dan sirup. Eyevit sirup dapat dikonsumsi oleh semua kalangan usia, baik untuk anak-anak, orang dewasa, maupun manula.
-                Biasanya Eyevit dalam bentuk sediaan Tablet digunakan untuk anak usia diatas 12 tahun dan orang dewasa, sedangkan Eyevit dalam bentuk sirup digunakan untuk anak usia dibawah 12 tahun.
-            </p>
+            <h6>
+                Biovision adalah suplemen yangan mengandung Ekstrak Billberry, Betacaroten, Vitamin C, Riboflavin. Biovision digunakan untuk membantu memelihara kesehatan mata, mencegah dan membantu mengobati beberapa gangguan mata, seperti katarak, gangguan penglihatan pada orang tua, glaukoma, buta senja, dan retinopati diabetik (gangguan pada mata yang terjadi pada penderita diabetes).
+            </h6>
             <li>
                 <h5>Komposisi</h5>
-                <p>1) Ekstrak kering bilberry 80 mg</p>
-                <p>2) Retinol 1.600 IU</p>
-                <p>3) β-carotene 5 mg</p>
-                <p>4) Vitamin E 40 mg</p>
-                <p>5) Lutein 250 mcg</p>
-                <p>6) Zeaxanthin 60 mcg</p>
-                <p>7) Selenium 15 mcg</p>
-                <p>8) Zinc 5 mg</p>
+                <p>1) Bilberry extract 80 mg</p>
+                <p>2) vitamin C 60 mg</p>
+                <p>3) beta-carotene 30 mg</p>
+                <p>4) vitamin B2 1.5 mg</p>
+                <p>5) Lutein 3 mg</p>
+                <p>6) Zeaxanthin 0,6 mg</p>
+                <p>7) Vitamin A 4000 IU</p>
+                <p>8) Vitamin C 60 mg</p>
             </li>
             <li>
                 <h5>Manfaat</h5>
-                <p>1) Menangkal radikal bebas yang dapat merusak sel-sel mata seperti radiasi yang dipancarkan layar komputer atau TV.</p>
-                <p>2) Mencegah terjadinya katarak.</p>
-                <p>3) Mempertajam penglihatan mata.</p>
-                <p>4) Mempercepat adaptasi dalam gelap.</p>
+                <p>1) Membantu menjaga kesehatan mata.</p>
+                <p>2) Menghambat terjadinya katarak.</p>
             </li>
             <li>
                 <h5>Dosis & Cara Penggunaan</h5>
-                <p>1) Dosis penggunaan Eyevit Tablet
-                    Dosis penggunaan untuk dewasa: diminum 2-3x sehari 1 tablet.</p>
-                <p>2) Dosis penggunaan Eyevit Sirup:<br>
-                    -Dewasa: 1 sendok takar (5 ml), diminum 2-3 kali sehari.<br>
-                    -Anak-anak: 1 sendok takar (5 ml), diminum 1 kali sehari.</p>
+                <p> Dosis penggunaan Biovision strip
+                    Biovision diminum 1 kapsul sekali sehari, setiap hari.</p>
             </li>
             <li>
                 <h5>Waktu Penyajian</h5>
-                <p>Sesudah makan.</p>
+                <p>Biovision dapat diminum sebelum maupun sesudah makan.</p>
             </li>
             <li>
                 <h5>Harap diperhatikan</h5>
-                <p>Bagi penderita hipersensitif terhadap obat. Konsultasikan terlebih dahulu ke dokter sebelum digunakan.</p>
-            </li>
+                <p>Penggunaan pada ibu hamil dan menyusui memerlukan konsultasi dengan dokter.</p></li>
             <li>
                 <h5>Cara Penyimpanan</h5>
-                <p>Simpan pada suhu di bawah 30 derajat Celcius, di tempat kering dan terhindar dari cahaya.</p>
-            </li>
+                <p>Simpan di tempat yang sejuk dan kering.</p></li>
             <li>
                 <h5>Harga</h5>
-                <p>Rp 37.000,-/botol</p></li>
+                <p>Rp33.500 - Rp67.200/strip</p></li>
             <li>
                 <h5>Isi</h5>
-                <p> -60 ml/botol<br> -6 tablet/strip</p>
-            </li>
+                <p>Dus, 3 Strip @ 10 Kapsul</p></li>
             <li>
                 <h5>BPOM</h5>
-                    <p>SD212667051</p>
-                    <a href="https://cekbpom.pom.go.id//home/produk/vne8p5vace3cgrovmh72mljl50/all/row/10/page/1/order/4/DESC/search/1/eyevit">klik disini untuk cek BPOM produk</a>
+                    <p>SD061329691</p>
+                    <a href="https://cekbpom.pom.go.id//home/produk/fcjl6rno4s0rdh51qnpvpm9th2/all/row/10/page/0/order/4/DESC/search/0/SD061329691">klik disini untuk cek BPOM produk</a>
             </li>
             <li>
-                <h5>
-                    Produksi
-                </h5>
+                <h5>Produksi</h5>
                 <p>
-                    oleh Lapi Laboratories
+                    oleh Indofarma Global Medika
                 </p>
             </li>
         </ul>
