--- a/deskripsi obat/deskripsi obat blackmores.html
+++ b/deskripsi obat/deskripsi obat blackmores.html
@@ -62,7 +62,7 @@
 
 <script>
     var musik = new Audio();
-    musik.src = "../audio/music1.mp3"
+    musik.src = "../audio/Blackmores.mp3"
     musik.loop = true;
     musik.play();
 
@@ -139,12 +139,12 @@
                 <p>Rp400.200 - Rp691.200,-/botol</p></li>
             <li>
                 <h5>Isi</h5>
-                <p> -60 kapsul lunak / botol kaca.</p>
+                <p> 60 kapsul lunak / botol kaca.</p>
             </li>
             <li>
                 <h5>BPOM</h5>
                     <p>SI164307161</p>
-                    <a href="">klik disini untuk cek BPOM produk.</a>
+                    <a href="https://cekbpom.pom.go.id//home/produk/jnd8h4u9idps0b5r2lqet4kkc2/all/row/10/page/1/order/4/DESC/search/0/SI164307161">klik disini untuk cek BPOM produk.</a>
             </li>
             <li>
                 <h5>
