--- a/deskripsi obat/deskripsi obat erlamycetin.html
+++ b/deskripsi obat/deskripsi obat erlamycetin.html
@@ -60,7 +60,7 @@
 
 <script>
     var musik = new Audio();
-    musik.src = "../audio/music1.mp3"
+    musik.src = "../audio/Erlamycetin.mp3"
     musik.loop = true;
     musik.play();
 
@@ -87,8 +87,8 @@
         <ul class="gallery">
             <li>
                 <a href=" ">
-                <img src="../images/eyevit.jpg" alt="EYEVIT"/>
-                <span>Suplemen & Terapi Penunjang</span>
+                <img src="../images/erlamycetin.jpg" alt="Erlamycetin"/>
+                <span>Salep Mata</span>
                  </a>
             </li>
             <div class="clear"></div>
@@ -96,45 +96,33 @@
     </div>
     <div class="container">
         <ul class="deskripsi">
-            <p>
-                Eyevit adalah suplemen yang mengandung Ekstrak Billberry, Vitamin A, Beta karoten, Vitamin E, 
-                Lutein, Zeaxanthin, Selenium dan Zinc digunakan untuk memenuhi kebutuhan nutrisi pada mata. 
-                Eyevit tersedia dalam bentuk sediaan tablet dan sirup. Eyevit sirup dapat dikonsumsi oleh semua kalangan usia, baik untuk anak-anak, orang dewasa, maupun manula.
-                Biasanya Eyevit dalam bentuk sediaan Tablet digunakan untuk anak usia diatas 12 tahun dan orang dewasa, sedangkan Eyevit dalam bentuk sirup digunakan untuk anak usia dibawah 12 tahun.
-            </p>
+            <h6>
+                ERLAMYCETIN 1% SALEP MATA adalah salep antibiotik steril untuk mata yang mengandung Chloramphenicol 1%. Chloramphenicol adalah antibiotik spektrum luas yang bersifat bakteriostatik. Obat ini efektif terhadap bakteri gram positif dan gram negatif yang aerob dan anaerob, kecuali Pseudomonas aeruginosa.
+            </h6>
             <li>
                 <h5>Komposisi</h5>
-                <p>1) Ekstrak kering bilberry 80 mg</p>
-                <p>2) Retinol 1.600 IU</p>
-                <p>3) β-carotene 5 mg</p>
-                <p>4) Vitamin E 40 mg</p>
-                <p>5) Lutein 250 mcg</p>
-                <p>6) Zeaxanthin 60 mcg</p>
-                <p>7) Selenium 15 mcg</p>
-                <p>8) Zinc 5 mg</p>
+                <p>1) Chloramphenicol 1%</p>
             </li>
             <li>
                 <h5>Manfaat</h5>
-                <p>1) Menangkal radikal bebas yang dapat merusak sel-sel mata seperti radiasi yang dipancarkan layar komputer atau TV.</p>
-                <p>2) Mencegah terjadinya katarak.</p>
-                <p>3) Mempertajam penglihatan mata.</p>
-                <p>4) Mempercepat adaptasi dalam gelap.</p>
+                <p>1) Mengobati mata infeksi seperti iritis.</p>
+                <p>2) Konjungtivitis.</p>
+                <p>3) Keratitis.</p>
+                <p>4) Dakriositis.</p>
+                <p>5) infeksi mata lain yang sensitif terhadap Chloramphenicol</p>
             </li>
             <li>
                 <h5>Dosis & Cara Penggunaan</h5>
-                <p>1) Dosis penggunaan Eyevit Tablet
-                    Dosis penggunaan untuk dewasa: diminum 2-3x sehari 1 tablet.</p>
-                <p>2) Dosis penggunaan Eyevit Sirup:<br>
-                    -Dewasa: 1 sendok takar (5 ml), diminum 2-3 kali sehari.<br>
-                    -Anak-anak: 1 sendok takar (5 ml), diminum 1 kali sehari.</p>
+                <p>1) Dosis penggunaan: PENGGUNAAN OBAT INI HARUS SESUAI DENGAN PETUNJUK DOKTER.</p>
+                <p>2) Cara penggunaan: Oleskan 3 kali sehari</p>
             </li>
             <li>
                 <h5>Waktu Penyajian</h5>
-                <p>Sesudah makan.</p>
+                <p>Oleskan pada mata yang sakit</p>
             </li>
             <li>
                 <h5>Harap diperhatikan</h5>
-                <p>Bagi penderita hipersensitif terhadap obat. Konsultasikan terlebih dahulu ke dokter sebelum digunakan.</p>
+                <p>HARUS DENGAN RESEP DOKTER. ibu menyusui, wanita hamil, fungsi ginja l yang buruk.</p>
             </li>
             <li>
                 <h5>Cara Penyimpanan</h5>
@@ -142,22 +130,20 @@
             </li>
             <li>
                 <h5>Harga</h5>
-                <p>Rp 37.000,-/botol</p></li>
+                <p>Rp9.200 - Rp28.900,-/tube</p></li>
             <li>
                 <h5>Isi</h5>
-                <p> -60 ml/botol<br> -6 tablet/strip</p>
+                <p> 3.5g/tube</p>
             </li>
             <li>
                 <h5>BPOM</h5>
-                    <p>SD212667051</p>
-                    <a href="https://cekbpom.pom.go.id//home/produk/vne8p5vace3cgrovmh72mljl50/all/row/10/page/1/order/4/DESC/search/1/eyevit">klik disini untuk cek BPOM produk</a>
+                    <p>DKL7206313731A1</p>
+                    <a href="https://cekbpom.pom.go.id//home/produk/fcjl6rno4s0rdh51qnpvpm9th2/all/row/10/page/1/order/4/DESC/search/0/DKL7206313731A1">klik disini untuk cek BPOM produk</a>
             </li>
             <li>
-                <h5>
-                    Produksi
-                </h5>
+                <h5>Produksi oleh</h5>
                 <p>
-                    oleh Lapi Laboratories
+                    ERLANGGA EDI LABORATORIES (ERELA) - Indonesia
                 </p>
             </li>
         </ul>
