--- a/deskripsi obat/deskripsi obat eyevit.html
+++ b/deskripsi obat/deskripsi obat eyevit.html
@@ -60,7 +60,7 @@
 
 <script>
     var musik = new Audio();
-    musik.src = "../audio/music1.mp3"
+    musik.src = "../audio/Eyevit.mp3"
     musik.loop = true;
     musik.play();
 
@@ -96,12 +96,12 @@
     </div>
     <div class="container">
         <ul class="deskripsi">
-            <p>
+            <h6>
                 Eyevit adalah suplemen yang mengandung Ekstrak Billberry, Vitamin A, Beta karoten, Vitamin E, 
                 Lutein, Zeaxanthin, Selenium dan Zinc digunakan untuk memenuhi kebutuhan nutrisi pada mata. 
                 Eyevit tersedia dalam bentuk sediaan tablet dan sirup. Eyevit sirup dapat dikonsumsi oleh semua kalangan usia, baik untuk anak-anak, orang dewasa, maupun manula.
                 Biasanya Eyevit dalam bentuk sediaan Tablet digunakan untuk anak usia diatas 12 tahun dan orang dewasa, sedangkan Eyevit dalam bentuk sirup digunakan untuk anak usia dibawah 12 tahun.
-            </p>
+            </h6>
             <li>
                 <h5>Komposisi</h5>
                 <p>1) Ekstrak kering bilberry 80 mg</p>
@@ -150,7 +150,7 @@
             <li>
                 <h5>BPOM</h5>
                     <p>SD212667051</p>
-                    <a href="https://cekbpom.pom.go.id//home/produk/vne8p5vace3cgrovmh72mljl50/all/row/10/page/1/order/4/DESC/search/1/eyevit">klik disini untuk cek BPOM produk</a>
+                    <a href="https://cekbpom.pom.go.id//home/produk/jnd8h4u9idps0b5r2lqet4kkc2/all/row/10/page/1/order/4/DESC/search/0/SD212667051">klik disini untuk cek BPOM produk</a>
             </li>
             <li>
                 <h5>
