--- a/deskripsi obat/deskripsi obat vitomata.html
+++ b/deskripsi obat/deskripsi obat vitomata.html
@@ -60,7 +60,7 @@
 
 <script>
     var musik = new Audio();
-    musik.src = "../audio/music1.mp3"
+    musik.src = "../audio/Madu Vitoma.mp3"
     musik.loop = true;
     musik.play();
 
@@ -96,11 +96,11 @@
     </div>
     <div class="container">
         <ul class="deskripsi">
-            <p>
+            <h6>
                 Madu Vitoma merupakan ramuan tradisional nenek moyang yang diproses secara modern dan higienis yang dikemas dalam bentuk liquid dengan 100% mengandung ekstrak herbal alam. 
                 Madu Vitomata teruji secara ilmiah dapat membantu menjaga kesehatan mata dan mengatasi masalah kesehatan mata Anda dan keluarga.
                 Madu Vitomata bereaksi cepat karena diracik dan diformulasikan khusus dari bahan-bahan ekstraksi herbal terbaik dalam bentuk Liquid sehingga sangat mudah menyerap ke dalam tubuh Anda.
-            </p>
+            </h6>
             <li>
                 <h5>Komposisi</h5>
                 <p>1) Madu hutan murni</p>
