--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@
       <div class="container">
      <ul class="cardly">
       <div class="card" style="width: 18rem; float: left; margin-left:45px;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="vitomata">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
           <p class="card-text">Madu herbal racikan yang membantu memulihkan dan mempertajam daya penglihatan.</p>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/eyevit.jpg" class="card-img-top" alt="...">
+        <img src="./images/eyevit.jpg" class="card-img-top" alt="eyevit">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Eyevit</h5>
           <p class="card-text">Suplemen dengan kandungan vitamin A untuk memberikan nutrisi dan menjaga kesehatan mata.</p>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/blackmores.jpg" class="card-img-top" alt="...">
+        <img src="./images/blackmores.jpg" class="card-img-top" alt="blackmores">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Blackmores Lutein Vision</h5>
           <p class="card-text">suplemen yang mengandung lutein dan selenium penghambat proses terjadinya rabun dekat.</p>
@@ -53,35 +53,35 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/erlamycetin 2.jpg" class="card-img-top" alt="erlamycetin">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Erlamycetin</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Salep antibiotik steril penghambat protein bakteri sehingga dapat mengobati infeksi pada mata.</p>
           <a href="./deskripsi obat/deskripsi obat erlamycetin.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/cendo vasacon.jpg" class="card-img-top" alt="cendo vasacon">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Cendo Vasacon-A Minidose</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Tetes Mata untuk mengatasi iritasi dan mengurangi kepekaan cahaya.</p>
           <a href="./deskripsi obat/deskripsi obat cendo.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/biovision.jpg" class="card-img-top" alt="biovision gold">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Biovision Gold</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Suplemen bagi menjaga asupan nutrisi ke mata dan memelihara kesehatan sel mata.</p>
           <a href="./deskripsi obat/deskripsi obat biovision.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="billbery carrot">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+          <h5 class="card-title" style="text-align: center;">Bilberry Carrot</h5>
+          <p class="card-text">Suplemen herbal kombinasi ekstrak buah bilberry dan wortel yang baik bagi menjaga kesehatan mata.</p>
+          <a href="./deskripsi obat/deskripsi obat billbery.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
