--- a/deskripsi obat/deskripsi obat cendo.html
+++ b/deskripsi obat/deskripsi obat cendo.html
@@ -60,7 +60,7 @@
 
 <script>
     var musik = new Audio();
-    musik.src = "../audio/music1.mp3"
+    musik.src = "../audio/Cendo.mp3"
     musik.loop = true;
     musik.play();
 
@@ -87,8 +87,8 @@
         <ul class="gallery">
             <li>
                 <a href=" ">
-                <img src="../images/eyevit.jpg" alt="EYEVIT"/>
-                <span>Suplemen & Terapi Penunjang</span>
+                <img src="../images/cendo vasacon.jpg" alt="Cendo Vasacon-A Minidose"/>
+                <span>Terapi Preparasi Mata</span>
                  </a>
             </li>
             <div class="clear"></div>
@@ -96,68 +96,53 @@
     </div>
     <div class="container">
         <ul class="deskripsi">
-            <p>
-                Eyevit adalah suplemen yang mengandung Ekstrak Billberry, Vitamin A, Beta karoten, Vitamin E, 
-                Lutein, Zeaxanthin, Selenium dan Zinc digunakan untuk memenuhi kebutuhan nutrisi pada mata. 
-                Eyevit tersedia dalam bentuk sediaan tablet dan sirup. Eyevit sirup dapat dikonsumsi oleh semua kalangan usia, baik untuk anak-anak, orang dewasa, maupun manula.
-                Biasanya Eyevit dalam bentuk sediaan Tablet digunakan untuk anak usia diatas 12 tahun dan orang dewasa, sedangkan Eyevit dalam bentuk sirup digunakan untuk anak usia dibawah 12 tahun.
-            </p>
+            <h6>
+                Cendo Vasacon adalah obat tetes mata yang mengandung Nafazolin HCl sebagai zat aktifnya. Cendo Vasacon digunakan untuk membantu mengurangi pembengkakan serta membantu mengurangi kepekaan mata terhadap cahaya. Cendo Vasacon juga digunakan untuk membantu meredakan mata merah, mata terasa gatal dan pedih karena alergi serta dapat juga membantu meredakan peradangan karena alergi.
+            </h6>
             <li>
                 <h5>Komposisi</h5>
-                <p>1) Ekstrak kering bilberry 80 mg</p>
-                <p>2) Retinol 1.600 IU</p>
-                <p>3) β-carotene 5 mg</p>
-                <p>4) Vitamin E 40 mg</p>
-                <p>5) Lutein 250 mcg</p>
-                <p>6) Zeaxanthin 60 mcg</p>
-                <p>7) Selenium 15 mcg</p>
-                <p>8) Zinc 5 mg</p>
-            </li>
+                <p>1) Nafazolin HCl 0,05 %</p>
+                <p>2) Antazolin Fosfat 0,5 %.</p>
             <li>
                 <h5>Manfaat</h5>
-                <p>1) Menangkal radikal bebas yang dapat merusak sel-sel mata seperti radiasi yang dipancarkan layar komputer atau TV.</p>
-                <p>2) Mencegah terjadinya katarak.</p>
-                <p>3) Mempertajam penglihatan mata.</p>
-                <p>4) Mempercepat adaptasi dalam gelap.</p>
+                <p>1) Mengurangi kepekaan terhadap cahaya, mata merah</p>
+                <p>2) Mata terasa gatal dan pedih karena alergi, konjungtivitis karena alergi</p>
             </li>
             <li>
                 <h5>Dosis & Cara Penggunaan</h5>
-                <p>1) Dosis penggunaan Eyevit Tablet
-                    Dosis penggunaan untuk dewasa: diminum 2-3x sehari 1 tablet.</p>
-                <p>2) Dosis penggunaan Eyevit Sirup:<br>
-                    -Dewasa: 1 sendok takar (5 ml), diminum 2-3 kali sehari.<br>
-                    -Anak-anak: 1 sendok takar (5 ml), diminum 1 kali sehari.</p>
+                <p>1) Dosis penggunaan : Penggunaan Obat Ini Harus Sesuai Dengan Petunjuk Dokter. Atas Anjuran Dokter.</p>
+                <p>2) Cara Penggunaan : Teteskan pada mata yang sakit.</p>
             </li>
             <li>
                 <h5>Waktu Penyajian</h5>
-                <p>Sesudah makan.</p>
+                <p>Bersihkan area mata terlebih dahulu.</p>
             </li>
             <li>
                 <h5>Harap diperhatikan</h5>
-                <p>Bagi penderita hipersensitif terhadap obat. Konsultasikan terlebih dahulu ke dokter sebelum digunakan.</p>
+                <p>HARUS DENGAN RESEP DOKTER. Hipersensitif terhadap komponen obat.</p>
             </li>
             <li>
                 <h5>Cara Penyimpanan</h5>
-                <p>Simpan pada suhu di bawah 30 derajat Celcius, di tempat kering dan terhindar dari cahaya.</p>
+                <p>Simpan dalam wadah kering yang tertutup pada suhu ruangan dan terhindar dari sinar matahari langsung.</p>
             </li>
             <li>
                 <h5>Harga</h5>
-                <p>Rp 37.000,-/botol</p></li>
+                <p>Rp17.100 - Rp30.800,-/Botol</p></li>
             <li>
                 <h5>Isi</h5>
-                <p> -60 ml/botol<br> -6 tablet/strip</p>
+                <p> Botol @ 5 mL, dan 15 mL.</p>
             </li>
             <li>
                 <h5>BPOM</h5>
-                    <p>SD212667051</p>
-                    <a href="https://cekbpom.pom.go.id//home/produk/vne8p5vace3cgrovmh72mljl50/all/row/10/page/1/order/4/DESC/search/1/eyevit">klik disini untuk cek BPOM produk</a>
+                    <p>DKL7603809946A1</p>
+                    <a href="https://cekbpom.pom.go.id//home/produk/fcjl6rno4s0rdh51qnpvpm9th2/all/row/10/page/1/order/4/DESC/search/0/DKL7603809946A1">klik disini untuk cek BPOM produk</a>
             </li>
             <li>
                 <h5>
                     Produksi
                 </h5>
                 <p>
-                    oleh Lapi Laboratories
+                    oleh Cendo Pharmaceutical.
                 </p>
             </li>
         </ul>
