--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
             padding-right: 200px;
         }
         
-        @media screen and (max-width:375px) and (max-height:667px) {
+        @media screen and (max-width:500px) {
+        body {
+            background: #DDFFBC;
+        }
         #halaman2 {
-        
             display: block;
             width: 375px;
             height: 667px;
