--- a/menutab.html
+++ b/menutab.html
@@ -14,10 +14,10 @@
 <body style="background-color: #DDFFBC;">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <div class="logo" style="margin-left: 110px;">
+            <div class="logo" >
             <img src="./images/logo eyeroom 2.png"/>
             </div>
-            <a href="profile.html"><button type="button" class="btn btn-outline-light position-relative" style="margin-right:110px;">
+            <a href="profile.html"><button type="button" class="btn btn-outline-light position-relative" >
               Profile
               <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
                 <span class="visually-hidden">New alerts</span>
@@ -44,7 +44,6 @@
   </body>
 </html>
   
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
