--- a/deskripsi obat/deskripsi obat billbery.html
+++ b/deskripsi obat/deskripsi obat billbery.html
@@ -89,7 +89,7 @@
         <ul class="gallery">
             <li>
                 <a href=" ">
-                <img src="../images/blackmores.jpg" alt="BLACKMORES"/>
+                <img src="../images/bilberry carrot 2.jpg" alt="BILBERRY"/>
                 <span>Vitamin & Mineral Herbal</span>
                  </a>
             </li>
