--- a/deskripsi obat/deskripsi obat erlamycetin.html
+++ b/deskripsi obat/deskripsi obat erlamycetin.html
@@ -87,7 +87,7 @@
         <ul class="gallery">
             <li>
                 <a href=" ">
-                <img src="../images/erlamycetin.jpg" alt="Erlamycetin"/>
+                <img src="../images/erlamycetin 2.jpg" alt="Erlamycetin"/>
                 <span>Salep Mata</span>
                  </a>
             </li>
