--- a/deskripsi obat/deskripsi obat eyevit.html
+++ b/deskripsi obat/deskripsi obat eyevit.html
@@ -87,7 +87,7 @@
         <ul class="gallery">
             <li>
                 <a href=" ">
-                <img src="../images/eyevit.jpg" alt="EYEVIT"/>
+                <img src="../images/eyevit 2.jpg" alt="EYEVIT"/>
                 <span>Suplemen & Terapi Penunjang</span>
                  </a>
             </li>
