--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@
       <div class="container">
      <ul class="cardly">
       <div class="card" style="width: 18rem; float: left; margin-left:45px;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="vitomata">
+        <img src="./images/MADU VITOMATA.png" class="card-img-top" alt="vitomata">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
           <p class="card-text">Madu herbal racikan yang membantu memulihkan dan mempertajam daya penglihatan.</p>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/eyevit.jpg" class="card-img-top" alt="eyevit">
+        <img src="./images/EYEVIT.png" class="card-img-top" alt="eyevit">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Eyevit</h5>
           <p class="card-text">Suplemen dengan kandungan vitamin A untuk memberikan nutrisi dan menjaga kesehatan mata.</p>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/blackmores.jpg" class="card-img-top" alt="blackmores">
+        <img src="./images/BLACKMORES.png" class="card-img-top" alt="blackmores">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Blackmores Lutein Vision</h5>
           <p class="card-text">suplemen yang mengandung lutein dan selenium penghambat proses terjadinya rabun dekat.</p>
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/erlamycetin 2.jpg" class="card-img-top" alt="erlamycetin">
+        <img src="./images/ERLAMYCETIN.png" class="card-img-top" alt="erlamycetin">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Erlamycetin</h5>
           <p class="card-text">Salep antibiotik steril penghambat protein bakteri sehingga dapat mengobati infeksi pada mata.</p>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/cendo vasacon.jpg" class="card-img-top" alt="cendo vasacon">
+        <img src="./images/CENDO VASACON.png" class="card-img-top" alt="cendo vasacon">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Cendo Vasacon-A Minidose</h5>
           <p class="card-text">Tetes Mata untuk mengatasi iritasi dan mengurangi kepekaan cahaya.</p>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/biovision.jpg" class="card-img-top" alt="biovision gold">
+        <img src="./images/BIOVISION GOLD.png" class="card-img-top" alt="biovision gold">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Biovision Gold</h5>
           <p class="card-text">Suplemen bagi menjaga asupan nutrisi ke mata dan memelihara kesehatan sel mata.</p>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="billbery carrot">
+        <img src="./images/BILBERRY CARROT.png" class="card-img-top" alt="billbery carrot">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Bilberry Carrot</h5>
           <p class="card-text">Suplemen herbal kombinasi ekstrak buah bilberry dan wortel yang baik bagi menjaga kesehatan mata.</p>
@@ -85,90 +85,90 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/KONILIFE VISION.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Konilife Vision</h5>
+          <p class="card-text">Sumplemen herbal penutrisi mata, pertajam penglihatan, mengurangi mata minus dan plus.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/Y-RINS.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Y-Rins Cuci Mata</h5>
+          <p class="card-text">Produk pencuci mata yang dapat membantu membersihkan, menyejukan dan menyegarkan mata.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/HIALID EYEDROP.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Hialid EyeDrops</h5>
+          <p class="card-text">Tetes mata untuk meredakan sensasi terbakar, iritasi, dan rasa tidak nyaman pada mata kering.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/ALCON TEARS.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Alcon Tears Naturale II</h5>
+          <p class="card-text">Tetes mata untuk menjaga mata tetap lembab dan melindungi luka infeksi.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/ALLETROL COMPOSITUM.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Alletrol Compositum</h5>
+          <p class="card-text">Obat untuk radang mata yang disertai infeksi bakteri dan luka pada kornea mata.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/LUBIR SIRUP.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Lubire Sirup</h5>
+          <p class="card-text">Multivitamin yang berfungsi untuk menjaga kesehatan mata dari iritasi dan meredakan ketegangan mata.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/BERRY VISION.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Berry Vision Dispersible</h5>
+          <p class="card-text">Suplemen ekstrak bilberry, dapat memelihara dan meningkatkan ketajaman penglihatan.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/OPTALVIT PLUS.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Optalvit Plus</h5>
+          <p class="card-text">Suplemen yang mengandug beta karoten, vitamin, dan mineral untuk memelihara kesehatan mata.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/LEVOCIN EYEDROPS.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Levocin EyeDrops</h5>
+          <p class="card-text">Antibiotik untuk pengobatan infeksi mata eksternal, seperti peradangan konjungtiva.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/NUTRIMAX BILBERRY.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Nutrimax Bilberry Extract</h5>
+          <p class="card-text">Suplemen untuk mengoptimalkan penglihatan di malam hari, serta sebagai antioksidan .</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <img src="./images/CENDO OCULENTA.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title" style="text-align: center;">Cendo Oculenta Ophthalmic Gel </h5>
+          <p class="card-text">Gel iritasi mata dan pengganti air mata saat mata kering.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
