--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
     <style>
-        * {
+        body {
             text-decoration: none;
             margin: 0px;
             padding: 0px;
