--- a/profile.html
+++ b/profile.html
@@ -31,10 +31,10 @@
         <span>
         <ul class="name">
           <div class="alert alert-light" role="alert" style="width: 300px; height: 50px; margin: 10px auto; ">
-            email pengguna
+            Eyeroom
           </div>
           <div class="alert alert-light" role="alert" style="width: 300px; height: 50px; margin: 10px auto;">
-            user  name
+            eyeroome12@gmail.com
           </div>
           <!-- <div class="alert alert-light" role="alert" style="width: 300px; height: 50px; margin: 10px auto;">
             password
