--- a/search.html
+++ b/search.html
@@ -9,58 +9,108 @@
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 <title>Welcome to EYEROOM</title>
+
+<style>
+  .d-flex{
+    width:600px;
+  }
+
+  .btnpr {
+    margin-left: 110px;
+  }
+
+  .profil {
+    margin-right:110px;
+  }
+
+  .cardly {
+    margin-left:45px;
+  }
+
+  @media screen and (max-width: 500px) and (max-height:667px) {
+    .btnpr {
+    margin-left: 10px;
+  }
+
+  .d-flex{
+    width: 250px;
+    height: 50px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .profil {
+    margin-right:0px;
+    margin-left: 0px;
+  }
+  }
+
+</style>
 </head>
-<body style="background-color: #DDFFBC;">
+<body style="background-color: #DDFFBC; background-image: url(./images/leaves.png);">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a href="menutab.html"><button type="button" class="btn btn-outline-light" style="width:100px; margin-left:110px;">Back</button></a>
+
+          <div class="btnpr"><a href="menutab.html"><button type="button" class="btn btn-outline-light" style=" width:80px; margin-top: 10px; margin-bottom: 10px;" >Back</button></a></div>
+          
+          <div class="d-flex">
           <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width:500px;">
-            <button class="btn btn-outline-success" type="submit" style="background-color:beige; width:100px;">Search</button>
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="margin-left: 0px;">
+            <button class="btn btn-outline-success" type="submit" style="background-color:beige; width: 75px; margin-left: 0px; margin-right: 0px;">Search</button>
           </form>
-          <a href="profile.html"><button type="button" class="btn btn-outline-light position-relative" style="margin-right:110px;">
-            Profile
-            <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
-              <span class="visually-hidden">New alerts</span>
-            </span>
-          </button></a>
+          </div>
+
+          <div class="profil">
+          <a href="profile.html"><button type="button" class="btn btn-outline-light position-relative" style="">
+          Profile
+          <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+          <span class="visually-hidden">New alerts</span>
+          </span></button></a>
+          </div>
+
         </div>
       </nav>
-      <div class="container">
-     <ul class="cardly">
-      <div class="card" style="width: 18rem; float: left; margin-left:45px;">
-        <img src="./images/MADU VITOMATA.png" class="card-img-top" alt="vitomata">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Madu herbal racikan yang membantu memulihkan dan mempertajam daya penglihatan.</p>
-          <a href="./deskripsi obat/deskripsi obat vitomata.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/EYEVIT.png" class="card-img-top" alt="eyevit">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Eyevit</h5>
-          <p class="card-text">Suplemen dengan kandungan vitamin A untuk memberikan nutrisi dan menjaga kesehatan mata.</p>
-          <a href="./deskripsi obat/deskripsi obat eyevit.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/BLACKMORES.png" class="card-img-top" alt="blackmores">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Blackmores Lutein Vision</h5>
-          <p class="card-text">suplemen yang mengandung lutein dan selenium penghambat proses terjadinya rabun dekat.</p>
-          <a href="./deskripsi obat/deskripsi obat blackmores.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/ERLAMYCETIN.png" class="card-img-top" alt="erlamycetin">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Erlamycetin</h5>
-          <p class="card-text">Salep antibiotik steril penghambat protein bakteri sehingga dapat mengobati infeksi pada mata.</p>
-          <a href="./deskripsi obat/deskripsi obat erlamycetin.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left;">
+
+      <div class="container" style="border-radius: 2.5%;">
+
+      <ul class="cardly">
+         <div class="card" style="width: 18rem; float: left;">
+            <img src="./images/MADU VITOMATA.png" class="card-img-top" alt="vitomata">
+            <div class="card-body">
+            <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+            <p class="card-text">Madu herbal racikan yang membantu memulihkan dan mempertajam daya penglihatan.</p>
+            <a href="./deskripsi obat/deskripsi obat vitomata.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+         </div>
+         </div>
+
+         <div class="card" style="width: 18rem; float: left;">
+            <img src="./images/EYEVIT.png" class="card-img-top" alt="eyevit">
+            <div class="card-body">
+              <h5 class="card-title" style="text-align: center;">Eyevit</h5>
+              <p class="card-text">Suplemen dengan kandungan vitamin A untuk memberikan nutrisi dan menjaga kesehatan mata.</p>
+              <a href="./deskripsi obat/deskripsi obat eyevit.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+            </div>
+          </div>
+
+        <div class="card" style="width: 18rem; float: left;">
+            <img src="./images/BLACKMORES.png" class="card-img-top" alt="blackmores">
+            <div class="card-body">
+              <h5 class="card-title" style="text-align: center;">Blackmores Lutein Vision</h5>
+              <p class="card-text">suplemen yang mengandung lutein dan selenium penghambat proses terjadinya rabun dekat.</p>
+              <a href="./deskripsi obat/deskripsi obat blackmores.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+            </div>
+          </div>
+
+        <div class="card" style="width: 18rem; float: left; ">
+            <img src="./images/ERLAMYCETIN.png" class="card-img-top" alt="erlamycetin">
+            <div class="card-body">
+              <h5 class="card-title" style="text-align: center;">Erlamycetin</h5>
+              <p class="card-text">Salep antibiotik steril penghambat protein bakteri sehingga dapat mengobati infeksi pada mata.</p>
+              <a href="./deskripsi obat/deskripsi obat erlamycetin.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+            </div>
+          </div>
+
+       <div class="card" style="width: 18rem; float: left;">
         <img src="./images/CENDO VASACON.png" class="card-img-top" alt="cendo vasacon">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Cendo Vasacon-A Minidose</h5>
@@ -68,39 +118,44 @@
           <a href="./deskripsi obat/deskripsi obat cendo.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/BIOVISION GOLD.png" class="card-img-top" alt="biovision gold">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Biovision Gold</h5>
-          <p class="card-text">Suplemen bagi menjaga asupan nutrisi ke mata dan memelihara kesehatan sel mata.</p>
-          <a href="./deskripsi obat/deskripsi obat biovision.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
-        <img src="./images/BILBERRY CARROT.png" class="card-img-top" alt="billbery carrot">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Bilberry Carrot</h5>
-          <p class="card-text">Suplemen herbal kombinasi ekstrak buah bilberry dan wortel yang baik bagi menjaga kesehatan mata.</p>
-          <a href="./deskripsi obat/deskripsi obat billbery.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/KONILIFE VISION.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Konilife Vision</h5>
-          <p class="card-text">Sumplemen herbal penutrisi mata, pertajam penglihatan, mengurangi mata minus dan plus.</p>
-          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/Y-RINS.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Y-Rins Cuci Mata</h5>
-          <p class="card-text">Produk pencuci mata yang dapat membantu membersihkan, menyejukan dan menyegarkan mata.</p>
-          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
+
+        <div class="card" style="width: 18rem; float: left;">
+            <img src="./images/BIOVISION GOLD.png" class="card-img-top" alt="biovision gold">
+            <div class="card-body">
+              <h5 class="card-title" style="text-align: center;">Biovision Gold</h5>
+              <p class="card-text">Suplemen bagi menjaga asupan nutrisi ke mata dan memelihara kesehatan sel mata.</p>
+              <a href="./deskripsi obat/deskripsi obat biovision.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+            </div>
+          </div>
+
+         <div class="card" style="width: 18rem; float: left;">
+            <img src="./images/BILBERRY CARROT.png" class="card-img-top" alt="billbery carrot">
+            <div class="card-body">
+              <h5 class="card-title" style="text-align: center;">Bilberry Carrot</h5>
+              <p class="card-text">Suplemen herbal kombinasi ekstrak buah bilberry dan wortel yang baik bagi menjaga kesehatan mata.</p>
+              <a href="./deskripsi obat/deskripsi obat billbery.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+            </div>
+          </div>
+
+        <div class="card" style="width: 18rem; float: left;">
+            <img src="./images/KONILIFE VISION.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title" style="text-align: center;">Konilife Vision</h5>
+              <p class="card-text">Sumplemen herbal penutrisi mata, pertajam penglihatan, mengurangi mata minus dan plus.</p>
+              <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+            </div>
+          </div>
+
+        <div class="card" style="width: 18rem; float: left; ">
+            <img src="./images/Y-RINS.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title" style="text-align: center;">Y-Rins Cuci Mata</h5>
+              <p class="card-text">Produk pencuci mata yang dapat membantu membersihkan, menyejukan dan menyegarkan mata.</p>
+              <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+            </div>
+          </div>
+
+       <div class="card" style="width: 18rem; float: left;">
         <img src="./images/HIALID EYEDROP.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Hialid EyeDrops</h5>
@@ -108,23 +163,25 @@
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/ALCON TEARS.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Alcon Tears Naturale II</h5>
-          <p class="card-text">Tetes mata untuk menjaga mata tetap lembab dan melindungi luka infeksi.</p>
-          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; float: left;">
-        <img src="./images/ALLETROL COMPOSITUM.png" class="card-img-top" alt="...">
+
+        <div class="card" style="width: 18rem; float: left;">
+            <img src="./images/ALCON TEARS.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title" style="text-align: center;">Alcon Tears Naturale II</h5>
+              <p class="card-text">Tetes mata untuk menjaga mata tetap lembab dan melindungi luka infeksi.</p>
+              <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+            </div></div>
+
+            <div class="card" style="width: 18rem; float: left;">
+                <img src="./images/ALLETROL COMPOSITUM.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Alletrol Compositum</h5>
           <p class="card-text">Obat untuk radang mata yang disertai infeksi bakteri dan luka pada kornea mata.</p>
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
+
+      <div class="card" style="width: 18rem; float: left;">
         <img src="./images/LUBIR SIRUP.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Lubire Sirup</h5>
@@ -132,6 +189,7 @@
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
+
       <div class="card" style="width: 18rem; float: left;">
         <img src="./images/BERRY VISION.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -148,7 +206,7 @@
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
+      <div class="card" style="width: 18rem; float: left;">
         <img src="./images/LEVOCIN EYEDROPS.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Levocin EyeDrops</h5>
@@ -172,6 +230,7 @@
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
+
       <div class="clear"></div>
       </ul>
       </div>
